--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-	background: $white;
-  font: 18px/1.4 $helvetica;
+	background: #000080;
+  font: 18px/1.4 $nunito;
   color: $darkGray;
 }
 
