--- a/style.scss
+++ b/style.scss
@@ -19,8 +19,8 @@ html {
 
 body {
 	background: #000080;
-  font: 18px/1.4 $nunito;
-  color: $darkGray;
+  font: 18px/1.4 $arial;
+  color: #FF0000;
 }
 
 .container {
